@@ -1,25 +1,15 @@
-require 'rubygems'
 require 'puppetlabs_spec_helper/rake_tasks'
-require 'rspec-system/rake_task'
 require 'puppet-lint/tasks/puppet-lint'
 
+PuppetLint.configuration.send('relative')
 PuppetLint.configuration.send("disable_80chars")
 PuppetLint.configuration.send('disable_class_parameter_defaults')
 PuppetLint.configuration.send('disable_class_inherits_from_params_class')
+PuppetLint.configuration.send('disable_documentation')
 PuppetLint.configuration.log_format = "%{path}:%{linenumber}:%{check}:%{KIND}:%{message}"
 PuppetLint.configuration.fail_on_warnings = true
+PuppetLint.configuration.ignore_paths = ["pkg/**/*", "vendor/**/*", "spec/**/*"]
 
-exclude_paths = [
-	  "pkg/**/*",
-	    "vendor/**/*",
-	      "spec/**/*",
-]
-
-PuppetLint.configuration.ignore_paths = exclude_paths
-
-desc "Run syntax, lint, and spec tests."
-task :test => [
-	  :lint,
-	    :spec,
-]
+desc "Run syntax, lint, and beaker tests."
+task :test => [:validate, :lint, :spec]
 
